# xfel-weak-signal-enhancement

./: .gitignore  CLAUDE.md  README.md  SOUL.md  pyproject.toml  requirements.txt
.claude/: context.md  ignore.md  settings.local.json
configs/: gan_config.yaml  model_config.yaml  simulation_config.yaml  training_config.yaml
docs_guide/: 完整实验方案.md  完整的研究结构.txt  开题报告.docx
scripts/: checkpoint.py  dataset.py  generate_bio_dataset.py  main_pipeline.py  pdb_fetcher.py  select_pdb_structures.py
src/: __init__.py
src/evaluation/: __init__.py  metrics.py  visualization.py
src/losses/: __init__.py  losses.py
src/models/: __init__.py  layers.py  noise_gan.py  unet_physics.py
src/reconstruction/: __init__.py  hio_er.py  support.py
src/simulation/: __init__.py  backend.py  beam_stop.py  bio_config.py  bio_diffraction_simulator.py  bio_sample_generator.py  bio_utils.py  data_augmentor.py  intensity_normalizer.py  noise_beamstop_applier.py  noise_model.py  random_mask_applier.py  simulator.py
tests/: __init__.py  conftest.py  download_test_data.py  test_config.py  test_metrics.py  test_models.py  test_pdb_diffraction_simulation.py  test_pdb_fetcher.py  test_physics.py  test_reconstruction.py
tests/bio_diffraction_simulator/: 1.mat  CLAUDE.md  README.md  beamstop_mask-585x585.mat  bio_sample_generator.py  config.py  data_augmentor.py  diffraction_simulator.py  generate_dataset.py  intensity_normalizer.py  noise_beamstop_applier.py  random_mask_applier.py  test_sample_sizes.py  test_small_sample.py  utils.py  任务书.md
tests/simulation_pdb(useless)/: __init__.py  (+9 more)
(+13 files in other folders)
